--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,8 +28,6 @@ a,
   }
 
   #app {
-    /*display: grid;
-    grid-template-columns: 1fr 1fr;*/
     padding: 0 2rem;
   }
 
@@ -51,20 +49,22 @@ a,
     content: " ";
     display: inline-block;
     position: relative;
-    top: -1.1em;
+    top: -1.02em;
     font-size: 1.5em;
     padding: 19px 1.75em;
-    background: url(./assets/calendar64.png) no-repeat scroll center;
+    background: url(../assets/calendar64.png) no-repeat scroll center;
     background-size: 15px 15px;
     height: 50px;
   }
 
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Bungee Inline', cursive;
+    color: rgba(115,225,197,255);
   }
   
   body {
-    font-family: 'Unica One', sans-serif;
+    font-family: 'Cardo', sans-serif;
+    font-size: 16px;
   }
   
 }
